# calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  ExpressionParser.cpp  ExpressionParser.h  PluginManager.cpp  PluginManager.h  README.md  SharedLibrary.cpp  SharedLibrary.h  main.cpp
plugins/: funcabs.cpp  funccos.cpp  funcexp.cpp  funcln.cpp  funcsin.cpp  funcsqrt.cpp
src/: Calculator.cpp  Calculator.h  ExpressionParser.cpp  ExpressionParser.h  PluginManager.cpp  PluginManager.h  SharedLibrary.cpp  SharedLibrary.h  main.cpp
tests/: test_calculator.cpp  test_parser.cpp  test_plugins.cpp
